fixed shadow on small image icons

--- a/static/style.css
+++ b/static/style.css
@@ -68,7 +68,8 @@ input[type=range]::-webkit-slider-thumb {
   position: absolute;
 	right: 0;
 	top: 0;
-	display: none;
+  display: none;
+  text-shadow: 0px 3px 10px #000000;
   }
 
   .display-image:hover .edit{
